--- a/resume.html
+++ b/resume.html
@@ -112,9 +112,9 @@
                     <div class="job-comp">
                       <h3>GitHub</h3>
                     </div>
-                    <p><a href = "https://github.com/Minjae21/OpenSourceHouse" style = "text-decoration: none;">OpenSource House | Apr 2024 - Present</a></p>
-                    <p><a href = "https://github.com/Minjae21/MVCCNewsApp" style = "text-decoration: none;">iOS Newspaper Application | March 2024 - May 2024</a></p>
-                    <p><a href = "https://github.com/Minjae21/text-story-game" style = "text-decoration: none;">Number Selection Game | May 2023 - June 2023</a></p>
+                    <p>Illini Connect | August 2024 - Present</p>
+                    <p>OpenSource House | July 2024 - Present</p>
+                    <p>TileMaster | March 2024 - April 2024</p>
                   </div>
               </div>
           </div>
