--- a/index.html
+++ b/index.html
@@ -1,93 +1,16 @@
-<!-- Developed by Minjae Jang -->
-<!-- Apr 26 2024 -->
-
-<!DOCTYPE html>
-<html lang = "en">
-<head>
-  <meta charset="UTF-8">
-  <meta content = "IE=edge" http-equiv="X-UA-Compatible">
-  <meta content = "Website" name = "description">
-  <meta name="viewport" content="width=device-width">
-  <meta content = "Minjae Jang" name = "author">
-  <title>Minjae Jang</title>
-  <link href="style.css" rel="stylesheet" type="text/css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
-  integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
-  crossorigin="anonymous" referrerpolicy="no-referrer" />
-</head>
-
-<body>
-    <!-- body 1 -->
-    <div class="hero-full-container background-image-container white-text-container"
-    style="background-image: url('IMG/background.png')">
-    <div id="wrapper">
-      <div id="navigation" class="is-hidden-touch">
-        <nav class="nav">
-          <div class="nav-right">
-            <a href="index.html">Home</a>
-            <a href="resume.html">Resume</a>
-            <a href="blog.html">Blog</a>
-          </div>
-        </nav>
-      </div>
-      <div class="container">
-      <div class="row">
-      <div class="col-xs-12">
-      <div class="hero-full-wrapper">
-      <div class="text-content">
-      <h1>Hello, I am <br>
-      <span id="typed-strings">
-      <span>Minjae Jang</span>
-      <span>a dreamer</span>
-      <span>a software enginner</span>
-      <span>a photographer</span>
-      </span>
-      <span id="typed"></span>
-      </h1>
-      </div>
-      </div>
-      </div>
-      </div>
-      </div>
-      </div>
-      <div class="container">
-      <div class="row">
-      <div class="col-xs-12 col-md-7">
-      <div class="template-example">
-      <h2 class="template-title-example">Hi there!</h2>
-      <p style = "font-size: 14px;">
-        My name is Minjae Jang. I am a computer science major student and I have been working<br>
-        on various coding projects. I am passionate about AI, ML and software development.<br>
-        Eventually, I plan to establish a community where people can find, and
-        share their open source<br>projects, in order to foster an environment
-        that people from various backgrounds<br>can learn, contribute and thrive together.
-      </p>
-      </div>
-      </div>
-      <span class="fa-icon">
-        <a href = "https://github.com/Minjae21" target = "_blank"><i class="fa-brands fa-github"></i></a>
-        </span>
-        <span class = "fa-icon">
-          <a href = "https://www.linkedin.com/in/minjae-jang-869392243/" target = "_blank"><i class="fa-brands fa-linkedin"></i></a>
-        </span>
-        <span class = "fa-icon">
-          <a href = "mailto:csjae21@gmail.com" target = "_blank"><i class="fa-solid fa-envelope"></i></a>
-        </span>
-        <span class = "fa-icon">
-          <a href = "https://www.instagram.com/thisisjae21/" target = "_blank"><i class="fa-brands fa-instagram"></i></a>
-        </span>
-      </div>
-      </div>
-      <footer>
-        <p class = "footer-c">© Minjae Jang 2024</p>
-      </footer>
-      <script>
-              document.addEventListener("DOMContentLoaded", function (event) {
-                  type();
-                  movingBackgroundImage();
-              });
-          </script>
-      <script type="text/javascript" src="script.js"></script>
-</body>
-
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/cloud.png" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Edu+AU+VIC+WA+NT+Guides:wght@400..700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Lora:ital,wght@0,400..700;1,400..700&family=Newsreader:ital,opsz,wght@0,6..72,200..800;1,6..72,200..800&display=swap" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Minjae Jang</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
